# kedro-airflow-test

./: Dockerfile  README.md  build-docker.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt  values.yaml
conf/base/: catalog.yml  parameters.yml
dags/: kedro_airflow_test_dag.py  kedro_data_processing_dag.py
data/01_raw/: input_data.parquet
data/04_feature/: processed_data.parquet
src/kedro_airflow_test/: __init__.py  operators.py  pipeline_registry.py
src/kedro_airflow_test/hooks/: __init__.py  hooks.py
src/kedro_airflow_test/pipelines/: __init__.py
src/kedro_airflow_test/pipelines/data_processing/: __init__.py  nodes.py
src/kedro_airflow_test/settings/: __init__.py  settings.py
